--- a/src/pages/blog/123123.md
+++ b/src/pages/blog/123123.md
@@ -1,6 +1,6 @@
 ---
 layout: ../../layouts/BlogPost.astro
-title: "123123"
+title: "1231231233333333333"
 description: "123123123"
 publishDate: 2024-04-17T14:20:05.872Z
 heroImage: /assets/placeholder-about.jpg
